fix: Long comment lists are now visible

--- a/src/app/components/CardModal/CardModal.scss
+++ b/src/app/components/CardModal/CardModal.scss
@@ -1,5 +1,5 @@
 .modal-underlay {
-  position: fixed;
+  position: absolute;
   left: 0;
   right: 0;
   top: 0;
